@@ -1,0 +1,101 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ *
+ * Copyright 2010 Sun Microsystems, Inc. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License. You can obtain
+ * a copy of the License at https://glassfish.dev.java.net/public/CDDL+GPL.html
+ * or glassfish/bootstrap/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at glassfish/bootstrap/legal/LICENSE.txt.
+ * Sun designates this particular file as subject to the "Classpath" exception
+ * as provided by Sun in the GPL Version 2 section of the License file that
+ * accompanied this code.  If applicable, add the following below the License
+ * Header, with the fields enclosed by brackets [] replaced by your own
+ * identifying information: "Portions Copyrighted [year]
+ * [name of copyright owner]"
+ *
+ * Contributor(s):
+ *
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+
+package javax.mail.internet;
+
+import java.util.Properties;
+
+import javax.mail.Session;
+import javax.mail.MessagingException;
+import javax.mail.Message;
+import javax.mail.internet.MimeMessage;
+
+import org.junit.*;
+import static org.junit.Assert.assertEquals;
+
+/**
+ * Test that "add" methods for address headers result in only a single
+ * address header, per RFC 2822.
+ */
+public class AddAddressHeaderTest {
+ 
+    private static Session s = Session.getInstance(new Properties());
+    private static InternetAddress[] setList = new InternetAddress[1];
+    private static InternetAddress[] addList = new InternetAddress[1];
+
+    static {
+	try {
+	    setList[0] = new InternetAddress("me@example.com");
+	    addList[0] = new InternetAddress("you@example.com");
+	} catch (MessagingException ex) {
+	}
+    }
+
+    @Test
+    public void testFrom() throws Exception {
+        MimeMessage m = new MimeMessage(s);
+	m.setFrom(setList[0]);
+	m.addFrom(addList);
+	m.saveChanges();
+	String[] h = m.getHeader("From");
+	assertEquals(1, h.length);
+    }
+
+    @Test
+    public void testTo() throws Exception {
+	testRecipients(Message.RecipientType.TO);
+    }
+
+    @Test
+    public void testCc() throws Exception {
+	testRecipients(Message.RecipientType.CC);
+    }
+
+    @Test
+    public void testBcc() throws Exception {
+	testRecipients(Message.RecipientType.BCC);
+    }
+
+    private void testRecipients(Message.RecipientType type) throws Exception {
+        MimeMessage m = new MimeMessage(s);
+	m.setRecipients(type, setList);
+	m.addRecipients(type, addList);
+	m.saveChanges();
+	// XXX - depends on RecipientType.toString
+	String[] h = m.getHeader(type.toString());
+	assertEquals(1, h.length);
+    }
+}
