@@ -22,6 +22,7 @@ The following bugs have been fixed in the 1.4.4 release.
 6778568	lower memory usage of POP3 parsing by buffering to disk
 6905730	MimeMessage.parse() is very slow on malformed message content
 6910675	IMAP provider can lose track of message sequence numbers
+6928566	Header violates RFC 2822 for multiple calls of addRecipient(s)
 G 11069	update the mail.jar manifest to include DynamicImport-Package
 <no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
 <no id>	properly disable TOP if POP3 CAPA response doesn't include it
